Sigil vNEXT TBA
    - Fix issue 1055, 1038, 1006: Focus switching causes unwanted cursor jumping
      in split view. Don't auto sync cursor position between views.
    - Implement issue 375: Add image selection dialog for inserting existing
      images into book and code views.
    - Add menu items for setting heading, adding new items, show / hide toolbars.
    - Organize menu.
    - Fix issue 803: Print prints immediately, no dialog box.
    - Implement 245: Unify zoom levels (book, text, image) and store the levels.
    - i18n capability. Build and load translation files.
    - Add keyboard shortcut manager so user can change the keyboard shortcuts. Fixes 966.
    - Add preference dialog. Closes 206, 718.
    - Refactor Find & Replace into a widget that appears below the editor. Closes issues:
      961, 579.
    - Windows Installer: Add Sigil as a handler for EPUB and HTML files so that jump lists
      will work and it will always show up on the 'Open With...' menu.
    - Fix issue 1033, 1034: Implement scroll to fragment for Code View and fix scrolling for
      book view.
    - Fix issue 1032: Remove '=' from the list of valid characters for ids.
    - Fix issue 1001: Valid IDs are now formed by replacing invalid characters with
      underscores. Colon removed from the list of valid characters.
    - Fix issue 1014: Sigil was erroneously assuming that fragment ids would be unique
      across the entire book, whereas they're only required to be unique within a
      particular xhtml document. New code implemented to cover those situations where
      this assumption is wrong.
    - Fix issue 1015: Fix issues with cursor positioning in Split View.
    - Fix issue 1022: Added support for Adobe's page-map.xml pagination extension. (Must
      use this exact filename).
    - Implement issue 183: Use a PCRE regular expression engine instead of QRegExp.
      Also fixes issue 498: regex '^' (start of line) broken.