@@ -41,6 +41,9 @@ extern const QString FONT_FOLDER_NAME;
 extern const QString TEXT_FOLDER_NAME;
 extern const QString STYLE_FOLDER_NAME;
 extern const QString MISC_FOLDER_NAME;
+extern const QStringList IMAGE_MIMEYPES;
+extern const QStringList TEXT_MIMETYPES;
+extern const QStringList STYLE_MIMETYPES;
 extern const QString NOT_IN_TOC_CLASS;
 extern const QString FIRST_CHAPTER_NAME; 
 extern const QString FIRST_CHAPTER_PREFIX;
